test/compile-fail/resolution/use/no-path/expected.txt
error: unresolved crate or mod `a`
 --> top.rhdl:1:4
  |
1 | use a::b;
  |     ^ no `a` crate or mod
